--- a/packages/themes/sdds-themes/src/css/sdds_insol.module.css
+++ b/packages/themes/sdds-themes/src/css/sdds_insol.module.css
@@ -1960,6 +1960,15 @@
   --plasma-typo-text-xs-medium-font-family: var(--plasma-typo-text-font-family);
   --plasma-typo-text-xs-medium-letter-spacing: -0.02em;
   --plasma-typo-text-xs-medium-font-style: normal;
+  --plasma-typo-text-slim-font-family: var(--plasma-typo-text-font-family);
+  --plasma-typo-text-slim-letter-spacing: -0.02em;
+  --plasma-typo-text-slim-font-style: normal;
+  --plasma-typo-text-slim-bold-font-family: var(--plasma-typo-text-font-family);
+  --plasma-typo-text-slim-bold-letter-spacing: -0.02em;
+  --plasma-typo-text-slim-bold-font-style: normal;
+  --plasma-typo-text-slim-medium-font-family: var(--plasma-typo-text-font-family);
+  --plasma-typo-text-slim-medium-letter-spacing: -0.02em;
+  --plasma-typo-text-slim-medium-font-style: normal;
 }
 
 @media (max-width: 559px) {
@@ -1972,46 +1981,46 @@
     --plasma-typo-dspl-l-bold-line-height: 5.75rem;
     --plasma-typo-dspl-m-font-size: 3.5rem;
     --plasma-typo-dspl-m-font-weight: 300;
-    --plasma-typo-dspl-m-line-height: 3.875rem;
+    --plasma-typo-dspl-m-line-height: 3.75rem;
     --plasma-typo-dspl-m-bold-font-size: 3.5rem;
     --plasma-typo-dspl-m-bold-font-weight: 600;
-    --plasma-typo-dspl-m-bold-line-height: 3.875rem;
+    --plasma-typo-dspl-m-bold-line-height: 3.75rem;
     --plasma-typo-dspl-s-font-size: 2.5rem;
     --plasma-typo-dspl-s-font-weight: 300;
-    --plasma-typo-dspl-s-line-height: 2.875rem;
+    --plasma-typo-dspl-s-line-height: 2.75rem;
     --plasma-typo-dspl-s-bold-font-size: 2.5rem;
     --plasma-typo-dspl-s-bold-font-weight: 600;
-    --plasma-typo-dspl-s-bold-line-height: 2.875rem;
-    --plasma-typo-h1-font-size: 1.75rem;
+    --plasma-typo-dspl-s-bold-line-height: 2.75rem;
+    --plasma-typo-h1-font-size: 2rem;
     --plasma-typo-h1-font-weight: 400;
-    --plasma-typo-h1-line-height: 2.125rem;
-    --plasma-typo-h1-bold-font-size: 1.75rem;
+    --plasma-typo-h1-line-height: 2.5rem;
+    --plasma-typo-h1-bold-font-size: 2rem;
     --plasma-typo-h1-bold-font-weight: 600;
-    --plasma-typo-h1-bold-line-height: 2.125rem;
-    --plasma-typo-h2-font-size: 1.5rem;
+    --plasma-typo-h1-bold-line-height: 2.5rem;
+    --plasma-typo-h2-font-size: 2rem;
     --plasma-typo-h2-font-weight: 400;
-    --plasma-typo-h2-line-height: 1.875rem;
-    --plasma-typo-h2-bold-font-size: 1.5rem;
+    --plasma-typo-h2-line-height: 2.5rem;
+    --plasma-typo-h2-bold-font-size: 2rem;
     --plasma-typo-h2-bold-font-weight: 600;
-    --plasma-typo-h2-bold-line-height: 1.875rem;
-    --plasma-typo-h3-font-size: 1.25rem;
+    --plasma-typo-h2-bold-line-height: 2.5rem;
+    --plasma-typo-h3-font-size: 1.125rem;
     --plasma-typo-h3-font-weight: 400;
     --plasma-typo-h3-line-height: 1.625rem;
-    --plasma-typo-h3-bold-font-size: 1.25rem;
+    --plasma-typo-h3-bold-font-size: 1.125rem;
     --plasma-typo-h3-bold-font-weight: 600;
     --plasma-typo-h3-bold-line-height: 1.625rem;
     --plasma-typo-h4-font-size: 1.125rem;
     --plasma-typo-h4-font-weight: 400;
-    --plasma-typo-h4-line-height: 1.5rem;
+    --plasma-typo-h4-line-height: 1.625rem;
     --plasma-typo-h4-bold-font-size: 1.125rem;
     --plasma-typo-h4-bold-font-weight: 600;
-    --plasma-typo-h4-bold-line-height: 1.5rem;
+    --plasma-typo-h4-bold-line-height: 1.625rem;
     --plasma-typo-h5-font-size: 1rem;
     --plasma-typo-h5-font-weight: 400;
-    --plasma-typo-h5-line-height: 1.375rem;
+    --plasma-typo-h5-line-height: 1.25rem;
     --plasma-typo-h5-bold-font-size: 1rem;
     --plasma-typo-h5-bold-font-weight: 600;
-    --plasma-typo-h5-bold-line-height: 1.375rem;
+    --plasma-typo-h5-bold-line-height: 1.25rem;
     --plasma-typo-body-l-font-size: 1.125rem;
     --plasma-typo-body-l-font-weight: 400;
     --plasma-typo-body-l-line-height: 1.375rem;
@@ -2071,25 +2080,25 @@
     --plasma-typo-dspl-l-medium-line-height: 5.75rem;
     --plasma-typo-dspl-m-medium-font-size: 3.5rem;
     --plasma-typo-dspl-m-medium-font-weight: 500;
-    --plasma-typo-dspl-m-medium-line-height: 3.875rem;
+    --plasma-typo-dspl-m-medium-line-height: 3.75rem;
     --plasma-typo-dspl-s-medium-font-size: 2.5rem;
     --plasma-typo-dspl-s-medium-font-weight: 500;
-    --plasma-typo-dspl-s-medium-line-height: 2.875rem;
-    --plasma-typo-h1-medium-font-size: 1.75rem;
+    --plasma-typo-dspl-s-medium-line-height: 2.75rem;
+    --plasma-typo-h1-medium-font-size: 2rem;
     --plasma-typo-h1-medium-font-weight: 500;
-    --plasma-typo-h1-medium-line-height: 2.125rem;
-    --plasma-typo-h2-medium-font-size: 1.5rem;
+    --plasma-typo-h1-medium-line-height: 2.5rem;
+    --plasma-typo-h2-medium-font-size: 2rem;
     --plasma-typo-h2-medium-font-weight: 500;
-    --plasma-typo-h2-medium-line-height: 1.875rem;
-    --plasma-typo-h3-medium-font-size: 1.25rem;
+    --plasma-typo-h2-medium-line-height: 2.5rem;
+    --plasma-typo-h3-medium-font-size: 1.125rem;
     --plasma-typo-h3-medium-font-weight: 500;
     --plasma-typo-h3-medium-line-height: 1.625rem;
     --plasma-typo-h4-medium-font-size: 1.125rem;
     --plasma-typo-h4-medium-font-weight: 500;
-    --plasma-typo-h4-medium-line-height: 1.5rem;
+    --plasma-typo-h4-medium-line-height: 1.625rem;
     --plasma-typo-h5-medium-font-size: 1rem;
     --plasma-typo-h5-medium-font-weight: 500;
-    --plasma-typo-h5-medium-line-height: 1.375rem;
+    --plasma-typo-h5-medium-line-height: 1.25rem;
     --plasma-typo-body-l-medium-font-size: 1.125rem;
     --plasma-typo-body-l-medium-font-weight: 500;
     --plasma-typo-body-l-medium-line-height: 1.375rem;
@@ -2117,6 +2126,15 @@
     --plasma-typo-text-xs-medium-font-size: 0.75rem;
     --plasma-typo-text-xs-medium-font-weight: 500;
     --plasma-typo-text-xs-medium-line-height: 1rem;
+    --plasma-typo-text-slim-font-size: 1rem;
+    --plasma-typo-text-slim-font-weight: 400;
+    --plasma-typo-text-slim-line-height: 1.25rem;
+    --plasma-typo-text-slim-bold-font-size: 1rem;
+    --plasma-typo-text-slim-bold-font-weight: 600;
+    --plasma-typo-text-slim-bold-line-height: 1.25rem;
+    --plasma-typo-text-slim-medium-font-size: 1rem;
+    --plasma-typo-text-slim-medium-font-weight: 500;
+    --plasma-typo-text-slim-medium-line-height: 1.25rem;
   }
 }
 
@@ -2136,40 +2154,40 @@
     --plasma-typo-dspl-m-bold-line-height: 4.75rem;
     --plasma-typo-dspl-s-font-size: 3rem;
     --plasma-typo-dspl-s-font-weight: 300;
-    --plasma-typo-dspl-s-line-height: 3.375rem;
+    --plasma-typo-dspl-s-line-height: 3.25rem;
     --plasma-typo-dspl-s-bold-font-size: 3rem;
     --plasma-typo-dspl-s-bold-font-weight: 600;
-    --plasma-typo-dspl-s-bold-line-height: 3.375rem;
+    --plasma-typo-dspl-s-bold-line-height: 3.25rem;
     --plasma-typo-h1-font-size: 2.5rem;
     --plasma-typo-h1-font-weight: 400;
-    --plasma-typo-h1-line-height: 2.875rem;
+    --plasma-typo-h1-line-height: 3rem;
     --plasma-typo-h1-bold-font-size: 2.5rem;
     --plasma-typo-h1-bold-font-weight: 600;
-    --plasma-typo-h1-bold-line-height: 2.875rem;
-    --plasma-typo-h2-font-size: 1.75rem;
+    --plasma-typo-h1-bold-line-height: 3rem;
+    --plasma-typo-h2-font-size: 2rem;
     --plasma-typo-h2-font-weight: 400;
-    --plasma-typo-h2-line-height: 2.125rem;
-    --plasma-typo-h2-bold-font-size: 1.75rem;
+    --plasma-typo-h2-line-height: 2.5rem;
+    --plasma-typo-h2-bold-font-size: 2rem;
     --plasma-typo-h2-bold-font-weight: 600;
-    --plasma-typo-h2-bold-line-height: 2.125rem;
-    --plasma-typo-h3-font-size: 1.25rem;
+    --plasma-typo-h2-bold-line-height: 2.5rem;
+    --plasma-typo-h3-font-size: 1.5rem;
     --plasma-typo-h3-font-weight: 400;
-    --plasma-typo-h3-line-height: 1.625rem;
-    --plasma-typo-h3-bold-font-size: 1.25rem;
+    --plasma-typo-h3-line-height: 2rem;
+    --plasma-typo-h3-bold-font-size: 1.5rem;
     --plasma-typo-h3-bold-font-weight: 600;
-    --plasma-typo-h3-bold-line-height: 1.625rem;
+    --plasma-typo-h3-bold-line-height: 2rem;
     --plasma-typo-h4-font-size: 1.125rem;
     --plasma-typo-h4-font-weight: 400;
-    --plasma-typo-h4-line-height: 1.5rem;
+    --plasma-typo-h4-line-height: 1.625rem;
     --plasma-typo-h4-bold-font-size: 1.125rem;
     --plasma-typo-h4-bold-font-weight: 600;
-    --plasma-typo-h4-bold-line-height: 1.5rem;
+    --plasma-typo-h4-bold-line-height: 1.625rem;
     --plasma-typo-h5-font-size: 1rem;
     --plasma-typo-h5-font-weight: 400;
-    --plasma-typo-h5-line-height: 1.375rem;
+    --plasma-typo-h5-line-height: 1.25rem;
     --plasma-typo-h5-bold-font-size: 1rem;
     --plasma-typo-h5-bold-font-weight: 600;
-    --plasma-typo-h5-bold-line-height: 1.375rem;
+    --plasma-typo-h5-bold-line-height: 1.25rem;
     --plasma-typo-body-l-font-size: 1.125rem;
     --plasma-typo-body-l-font-weight: 400;
     --plasma-typo-body-l-line-height: 1.375rem;
@@ -2200,18 +2218,18 @@
     --plasma-typo-body-xxs-bold-font-size: 0.625rem;
     --plasma-typo-body-xxs-bold-font-weight: 600;
     --plasma-typo-body-xxs-bold-line-height: 0.75rem;
-    --plasma-typo-text-l-font-size: 1.25rem;
+    --plasma-typo-text-l-font-size: 1.5rem;
     --plasma-typo-text-l-font-weight: 400;
-    --plasma-typo-text-l-line-height: 1.75rem;
-    --plasma-typo-text-l-bold-font-size: 1.25rem;
+    --plasma-typo-text-l-line-height: 2rem;
+    --plasma-typo-text-l-bold-font-size: 1.5rem;
     --plasma-typo-text-l-bold-font-weight: 600;
-    --plasma-typo-text-l-bold-line-height: 1.75rem;
-    --plasma-typo-text-m-font-size: 1rem;
+    --plasma-typo-text-l-bold-line-height: 2rem;
+    --plasma-typo-text-m-font-size: 1.125rem;
     --plasma-typo-text-m-font-weight: 400;
-    --plasma-typo-text-m-line-height: 1.5rem;
-    --plasma-typo-text-m-bold-font-size: 1rem;
+    --plasma-typo-text-m-line-height: 1.625rem;
+    --plasma-typo-text-m-bold-font-size: 1.125rem;
     --plasma-typo-text-m-bold-font-weight: 600;
-    --plasma-typo-text-m-bold-line-height: 1.5rem;
+    --plasma-typo-text-m-bold-line-height: 1.625rem;
     --plasma-typo-text-s-font-size: 0.875rem;
     --plasma-typo-text-s-font-weight: 400;
     --plasma-typo-text-s-line-height: 1.25rem;
@@ -2232,22 +2250,22 @@
     --plasma-typo-dspl-m-medium-line-height: 4.75rem;
     --plasma-typo-dspl-s-medium-font-size: 3rem;
     --plasma-typo-dspl-s-medium-font-weight: 500;
-    --plasma-typo-dspl-s-medium-line-height: 3.375rem;
+    --plasma-typo-dspl-s-medium-line-height: 3.25rem;
     --plasma-typo-h1-medium-font-size: 2.5rem;
     --plasma-typo-h1-medium-font-weight: 500;
-    --plasma-typo-h1-medium-line-height: 2.875rem;
-    --plasma-typo-h2-medium-font-size: 1.75rem;
+    --plasma-typo-h1-medium-line-height: 3rem;
+    --plasma-typo-h2-medium-font-size: 2rem;
     --plasma-typo-h2-medium-font-weight: 500;
-    --plasma-typo-h2-medium-line-height: 2.125rem;
-    --plasma-typo-h3-medium-font-size: 1.25rem;
+    --plasma-typo-h2-medium-line-height: 2.5rem;
+    --plasma-typo-h3-medium-font-size: 1.5rem;
     --plasma-typo-h3-medium-font-weight: 500;
-    --plasma-typo-h3-medium-line-height: 1.625rem;
+    --plasma-typo-h3-medium-line-height: 2rem;
     --plasma-typo-h4-medium-font-size: 1.125rem;
     --plasma-typo-h4-medium-font-weight: 500;
-    --plasma-typo-h4-medium-line-height: 1.5rem;
+    --plasma-typo-h4-medium-line-height: 1.625rem;
     --plasma-typo-h5-medium-font-size: 1rem;
     --plasma-typo-h5-medium-font-weight: 500;
-    --plasma-typo-h5-medium-line-height: 1.375rem;
+    --plasma-typo-h5-medium-line-height: 1.25rem;
     --plasma-typo-body-l-medium-font-size: 1.125rem;
     --plasma-typo-body-l-medium-font-weight: 500;
     --plasma-typo-body-l-medium-line-height: 1.375rem;
@@ -2263,18 +2281,27 @@
     --plasma-typo-body-xxs-medium-font-size: 0.625rem;
     --plasma-typo-body-xxs-medium-font-weight: 500;
     --plasma-typo-body-xxs-medium-line-height: 0.75rem;
-    --plasma-typo-text-l-medium-font-size: 1.25rem;
+    --plasma-typo-text-l-medium-font-size: 1.5rem;
     --plasma-typo-text-l-medium-font-weight: 500;
-    --plasma-typo-text-l-medium-line-height: 1.75rem;
-    --plasma-typo-text-m-medium-font-size: 1rem;
+    --plasma-typo-text-l-medium-line-height: 2rem;
+    --plasma-typo-text-m-medium-font-size: 1.125rem;
     --plasma-typo-text-m-medium-font-weight: 500;
-    --plasma-typo-text-m-medium-line-height: 1.5rem;
+    --plasma-typo-text-m-medium-line-height: 1.625rem;
     --plasma-typo-text-s-medium-font-size: 0.875rem;
     --plasma-typo-text-s-medium-font-weight: 500;
     --plasma-typo-text-s-medium-line-height: 1.25rem;
     --plasma-typo-text-xs-medium-font-size: 0.75rem;
     --plasma-typo-text-xs-medium-font-weight: 500;
     --plasma-typo-text-xs-medium-line-height: 1rem;
+    --plasma-typo-text-slim-font-size: 1rem;
+    --plasma-typo-text-slim-font-weight: 400;
+    --plasma-typo-text-slim-line-height: 1.25rem;
+    --plasma-typo-text-slim-bold-font-size: 1rem;
+    --plasma-typo-text-slim-bold-font-weight: 600;
+    --plasma-typo-text-slim-bold-line-height: 1.25rem;
+    --plasma-typo-text-slim-medium-font-size: 1rem;
+    --plasma-typo-text-slim-medium-font-weight: 500;
+    --plasma-typo-text-slim-medium-line-height: 1.25rem;
   }
 }
 
@@ -2306,16 +2333,16 @@
     --plasma-typo-h1-bold-line-height: 3.375rem;
     --plasma-typo-h2-font-size: 2rem;
     --plasma-typo-h2-font-weight: 400;
-    --plasma-typo-h2-line-height: 2.375rem;
+    --plasma-typo-h2-line-height: 2.5rem;
     --plasma-typo-h2-bold-font-size: 2rem;
     --plasma-typo-h2-bold-font-weight: 600;
-    --plasma-typo-h2-bold-line-height: 2.375rem;
+    --plasma-typo-h2-bold-line-height: 2.5rem;
     --plasma-typo-h3-font-size: 1.5rem;
     --plasma-typo-h3-font-weight: 400;
-    --plasma-typo-h3-line-height: 1.875rem;
+    --plasma-typo-h3-line-height: 2rem;
     --plasma-typo-h3-bold-font-size: 1.5rem;
     --plasma-typo-h3-bold-font-weight: 600;
-    --plasma-typo-h3-bold-line-height: 1.875rem;
+    --plasma-typo-h3-bold-line-height: 2rem;
     --plasma-typo-h4-font-size: 1.25rem;
     --plasma-typo-h4-font-weight: 400;
     --plasma-typo-h4-line-height: 1.625rem;
@@ -2324,10 +2351,10 @@
     --plasma-typo-h4-bold-line-height: 1.625rem;
     --plasma-typo-h5-font-size: 1.125rem;
     --plasma-typo-h5-font-weight: 400;
-    --plasma-typo-h5-line-height: 1.5rem;
+    --plasma-typo-h5-line-height: 1.625rem;
     --plasma-typo-h5-bold-font-size: 1.125rem;
     --plasma-typo-h5-bold-font-weight: 600;
-    --plasma-typo-h5-bold-line-height: 1.5rem;
+    --plasma-typo-h5-bold-line-height: 1.625rem;
     --plasma-typo-body-l-font-size: 1.125rem;
     --plasma-typo-body-l-font-weight: 400;
     --plasma-typo-body-l-line-height: 1.375rem;
@@ -2396,16 +2423,16 @@
     --plasma-typo-h1-medium-line-height: 3.375rem;
     --plasma-typo-h2-medium-font-size: 2rem;
     --plasma-typo-h2-medium-font-weight: 500;
-    --plasma-typo-h2-medium-line-height: 2.375rem;
+    --plasma-typo-h2-medium-line-height: 2.5rem;
     --plasma-typo-h3-medium-font-size: 1.5rem;
     --plasma-typo-h3-medium-font-weight: 500;
-    --plasma-typo-h3-medium-line-height: 1.875rem;
+    --plasma-typo-h3-medium-line-height: 2rem;
     --plasma-typo-h4-medium-font-size: 1.25rem;
     --plasma-typo-h4-medium-font-weight: 500;
     --plasma-typo-h4-medium-line-height: 1.625rem;
     --plasma-typo-h5-medium-font-size: 1.125rem;
     --plasma-typo-h5-medium-font-weight: 500;
-    --plasma-typo-h5-medium-line-height: 1.5rem;
+    --plasma-typo-h5-medium-line-height: 1.625rem;
     --plasma-typo-body-l-medium-font-size: 1.125rem;
     --plasma-typo-body-l-medium-font-weight: 500;
     --plasma-typo-body-l-medium-line-height: 1.375rem;
@@ -2433,5 +2460,14 @@
     --plasma-typo-text-xs-medium-font-size: 0.75rem;
     --plasma-typo-text-xs-medium-font-weight: 500;
     --plasma-typo-text-xs-medium-line-height: 1rem;
+    --plasma-typo-text-slim-font-size: 1rem;
+    --plasma-typo-text-slim-font-weight: 400;
+    --plasma-typo-text-slim-line-height: 1.25rem;
+    --plasma-typo-text-slim-bold-font-size: 1rem;
+    --plasma-typo-text-slim-bold-font-weight: 600;
+    --plasma-typo-text-slim-bold-line-height: 1.25rem;
+    --plasma-typo-text-slim-medium-font-size: 1rem;
+    --plasma-typo-text-slim-medium-font-weight: 500;
+    --plasma-typo-text-slim-medium-line-height: 1.25rem;
   }
 }
