--- a/packages/themes/sdds-themes/src/css/sdds_cs.module.css
+++ b/packages/themes/sdds-themes/src/css/sdds_cs.module.css
@@ -548,10 +548,10 @@
   --on-light-text-info: #199AF0;
   --inverse-text-primary-hover: #000000FF;
   --inverse-text-primary-active: #B4C7D9FF;
-  --inverse-text-secondary-hover: #000000FF;
-  --inverse-text-secondary-active: #636D74FF;
+  --inverse-text-secondary-hover: #FFFFFFFF;
+  --inverse-text-secondary-active: #90A3B2FF;
   --inverse-text-tertiary-hover: #FFFFFFFF;
-  --inverse-text-tertiary-active: #596269FF;
+  --inverse-text-tertiary-active: #636D74FF;
   --inverse-text-accent-hover: #19D719FF;
   --inverse-text-accent-active: #118D11FF;
   --inverse-text-accent-minor-hover: #09AA09FF;
@@ -564,17 +564,17 @@
   --inverse-text-negative-active: #FF001AFF;
   --inverse-text-primary: #F7F9FB;
   --inverse-text-primary-brightness: #F7F9FBFF;
-  --inverse-text-secondary: #7B868E;
   --inverse-text-accent: #15B015;
   --inverse-text-positive: #15B015;
   --inverse-text-negative: #FF293E;
   --inverse-text-accent-minor: #055C05;
-  --inverse-text-tertiary: #707C84;
   --inverse-text-warning: #F3A912;
-  --surface-solid-primary-hover: #F5F8F9FF;
-  --surface-solid-primary-active: #E2E9EEFF;
-  --surface-solid-secondary-hover: #F8FAFBFF;
-  --surface-solid-secondary-active: #EBF0F4FF;
+  --inverse-text-secondary: #C0CBD3;
+  --inverse-text-tertiary: #7B868E;
+  --surface-solid-primary-hover: #F8FAFBFF;
+  --surface-solid-primary-active: #EBF0F4FF;
+  --surface-solid-secondary-hover: #F5F8F9FF;
+  --surface-solid-secondary-active: #E2E9EEFF;
   --surface-solid-tertiary-hover: #E2E9EEFF;
   --surface-solid-tertiary-active: #C9D5DEFF;
   --surface-solid-card-hover: #FFFFFFFF;
@@ -601,7 +601,7 @@
   --surface-info-minor-active: #E0F3FFFF;
   --surface-transparent-negative-hover: #FFFFFFFF;
   --surface-transparent-negative-active: #FFEBEDFF;
-  --surface-solid-primary-brightness: #FCFDFDFF;
+  --surface-solid-primary-brightness: #FFFFFFFF;
   --surface-solid-card: #FFFFFFFF;
   --surface-solid-card-brightness: #FFFFFFFF;
   --surface-solid-default: #657179;
@@ -615,9 +615,9 @@
   --surface-info-minor: #EDF8FF;
   --surface-info: #199AF0;
   --surface-transparent-negative: #FFF5F6;
-  --surface-solid-secondary: #F2F5F8;
   --surface-solid-tertiary: #D5DFE6;
-  --surface-solid-primary: #E8EEF2;
+  --surface-solid-primary: #F2F5F8;
+  --surface-solid-secondary: #E8EEF2;
   --on-dark-surface-solid-primary-hover: #394147FF;
   --on-dark-surface-solid-primary-active: #272C30FF;
   --on-dark-surface-solid-secondary-hover: #5A656CFF;
@@ -668,10 +668,10 @@
   --on-dark-surface-solid-secondary: #485056;
   --on-dark-surface-solid-tertiary: #657179;
   --on-dark-surface-solid-primary: #30373C;
-  --on-light-surface-solid-primary-hover: #F5F8F9FF;
-  --on-light-surface-solid-primary-active: #E2E9EEFF;
-  --on-light-surface-solid-secondary-hover: #F8FAFBFF;
-  --on-light-surface-solid-secondary-active: #EBF0F4FF;
+  --on-light-surface-solid-primary-hover: #F8FAFBFF;
+  --on-light-surface-solid-primary-active: #EBF0F4FF;
+  --on-light-surface-solid-secondary-hover: #F5F8F9FF;
+  --on-light-surface-solid-secondary-active: #E2E9EEFF;
   --on-light-surface-solid-tertiary-hover: #E2E9EEFF;
   --on-light-surface-solid-tertiary-active: #C9D5DEFF;
   --on-light-surface-solid-card-hover: #FFFFFFFF;
@@ -698,7 +698,7 @@
   --on-light-surface-info-minor-active: #E0F3FFFF;
   --on-light-surface-transparent-negative-hover: #FFFFFFFF;
   --on-light-surface-transparent-negative-active: #FFEBEDFF;
-  --on-light-surface-solid-primary-brightness: #FCFDFDFF;
+  --on-light-surface-solid-primary-brightness: #FFFFFFFF;
   --on-light-surface-solid-card: #FFFFFFFF;
   --on-light-surface-solid-card-brightness: #FFFFFFFF;
   --on-light-surface-solid-default: #657179;
@@ -713,8 +713,8 @@
   --on-light-surface-info: #199AF0;
   --on-light-surface-transparent-negative: #FFF5F6;
   --on-light-surface-solid-tertiary: #D5DFE6;
-  --on-light-surface-solid-primary: #E8EEF2;
-  --on-light-surface-solid-secondary: #F2F5F8;
+  --on-light-surface-solid-primary: #F2F5F8;
+  --on-light-surface-solid-secondary: #E8EEF2;
   --inverse-surface-solid-primary-hover: #394147FF;
   --inverse-surface-solid-primary-active: #272C30FF;
   --inverse-surface-solid-secondary-hover: #5A656CFF;
@@ -763,9 +763,9 @@
   --inverse-surface-solid-secondary: #485056;
   --inverse-surface-solid-tertiary: #657179;
   --background-primary-brightness: #F3F6F8FF;
-  --background-primary: #E8EEF2;
+  --background-primary: #F2F5F8;
   --dark-background-primary: #060A0C;
-  --light-background-primary: #E8EEF2;
+  --light-background-primary: #F2F5F8;
   --inverse-background-primary: #060A0C;
   --inverse-background-primary-brightness: #15191BFF;
   --outline-solid-primary-hover: #E2E9EEFF;
@@ -833,8 +833,8 @@
   --on-light-outline-info: #0C72B6;
   --inverse-outline-solid-primary-hover: #394147FF;
   --inverse-outline-solid-primary-active: #272C30FF;
-  --inverse-outline-solid-secondary-hover: #20282DFF;
-  --inverse-outline-solid-secondary-active: #0B0D0FFF;
+  --inverse-outline-solid-secondary-hover: #FFFFFFFF;
+  --inverse-outline-solid-secondary-active: #515B61FF;
   --inverse-outline-clear-hover: #FFFFFFFF;
   --inverse-outline-clear-active: #FFFFFFFF;
   --inverse-outline-accent-hover: #0DAF0DFF;
@@ -849,9 +849,9 @@
   --inverse-outline-negative: #FF293E;
   --inverse-outline-positive: #0C9C0C;
   --inverse-outline-solid-primary: #30373C;
-  --inverse-outline-solid-secondary: #13181B;
   --inverse-outline-clear: #FFFFFF00;
   --inverse-outline-info: #118CDF;
+  --inverse-outline-solid-secondary: #657179;
   --data-yellow: #F3A912;
   --data-yellow-hover: #F5B638FF;
   --data-yellow-active: #E49C0CFF;
